<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.search.SearchActivity">

    <TextView
        android:id="@+id/txt_search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="6dp"
        android:gravity="center"
        android:text="@string/search"
        android:textColor="@color/on_primary_color"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@id/textField"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="@id/txt_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/txt_search"
        app:tint="@color/on_primary_color" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:hint="@string/search"
        app:boxStrokeColor="@color/on_primary_color"
        app:cursorColor="@color/on_primary_color"
        app:endIconMode="clear_text"
        app:endIconTint="@color/on_primary_color"
        app:hintTextColor="@color/on_primary_color"
        app:layout_constraintTop_toBottomOf="@id/txt_search">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_search"
            android:drawableTint="@color/on_primary_color"
            android:imeOptions="actionDone"
            android:lines="1"
            android:maxLines="1"
            android:minLines="1"
            android:singleLine="true"
            app:endIconMode="clear_text" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textField"
        tools:visibility="invisible" />

    <LinearLayout
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/primary_color"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textField">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/on_primary_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:text="@string/please_wait"
            android:textColor="@color/text_color"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/error"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/primary_color"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textField">

        <TextView
            android:id="@+id/tv_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:paddingHorizontal="18dp"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="Error" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/try_again" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/empty"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/primary_color"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textField">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:paddingHorizontal="18dp"
            android:text="@string/stay_informed"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>